# nextIntranet

./: .env  .gitignore  .gitmodules  AGENTS.md  docker-compose.yml  package-lock.json  package.json
NextIntranet_browser/: package.json  (+1 more)
nextintranet_backend/: Dockerfile  asgi.py  db.sqlite3  delete_components.py  delete_operations.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  transfer_categories.py  transfer_operations.py  transfer_positions.py  transfer_stock.py
nextintranet_backend/documents/: category.json  stock.json  store_positions.json
nextintranet_backend/nextintranet_backend/: api.py  asgi.py  consumer.py  consumers.py  context_processors.py  middleware.py  permissions.py  realtime.py  routers.py  routing.py  schema.py  settings.py  storage_backends.py  urls.py  urls_api.py  ws_auth.py  wsgi.py
nextintranet_backend/nextintranet_backend/admin/: __init__.py
nextintranet_backend/nextintranet_backend/help/: crud.py
nextintranet_backend/nextintranet_backend/labels/: base.py  factory.py
nextintranet_backend/nextintranet_backend/migrations/: 0001_initial.py  0002_printlist_printitem.py  0003_useraccesspermission.py  0004_useraccesspermission_guest.py
nextintranet_backend/nextintranet_backend/models/: __init__.py  printList.py  user.py  userAccessPermission.py  userSettings.py
nextintranet_backend/nextintranet_invoicing/: apps.py
nextintranet_backend/nextintranet_production/: __init__.py  admin.py  apps.py  urls_api.py
nextintranet_backend/nextintranet_warehouse/: admin.py  apps.py  signals.py  urls.py  urls_api.py
(+316 files in other folders)
